--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "i18n": "^0.13.3",
+    "isomorphic-unfetch": "3.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intl": "^5.20.12",
+    "react-paginate": "^7.1.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
